fix: wrong styles in 'sf-header-navigation-item' links
Solution:
- Hidden the left element of the link that is empty
- Prevent link text from being broken into words and left in columns
- Added missing semicolon

--- a/packages/shared/styles/components/organisms/SfHeader.scss
+++ b/packages/shared/styles/components/organisms/SfHeader.scss
@@ -15,7 +15,8 @@
     --header-navigation-item-padding: 0;
   }
   &__link {
-    --link-text-decoration: var(--header-navigation-item-text-decoration, none)
+    --link-text-decoration: var(--header-navigation-item-text-decoration, none);
+    display: none;
   }
   & > &__menu-item{
     --menu-item-font-size: var(--font-size--base);
@@ -63,6 +64,7 @@
         text-transform: uppercase;
         text-decoration: initial;
         text-align: center;
+        white-space: nowrap;
         @include for-desktop {
           padding: var(--header-navigation-item-padding, calc(var(--spacer-lg) - 1px) var(--spacer-sm));
           margin: var(--header-navigation-item-margin, 0);
